--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,18 +3,35 @@
 @tailwind utilities;
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: helvetica;
-    letter-spacing: 0.08em;
     word-spacing: 0.02em;
-    line-height:1.5;
+    font-weight: 400;
+    letter-spacing: -0.12px;
 }
 
 html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
     width: 100%;
-    min-height: 100%;
-    overflow-x: hidden;
+    /* overflow:auto!important;  */
+    max-height: 100%!important;
+    background-color: black;
+    /* overflow-x: hidden!important; */
 }
 
+html {
+    -webkit-text-size-adjust: 100%;
+}
+
+body {
+    -webkit-font-smoothing: antialiased; 
+    font-synthesis: none;
+    min-height: 200vh; 
+}
+
+img, video {
+    max-width: 100%; 
+    height: auto; 
+}
